death contributin basics
